k3s/Manifests/dashy.yaml
# Deployment - this defines what runs
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy # What is this thing called
spec: # Define what to deploy
  replicas: 2 # How many pods should the system try to keep alive?
  selector: # What is the name of the thing to deploy?
    matchLabels:
      app: dashy
  template: # Define the thing to deploy, referenced in selector
    metadata:
      labels:
        app: dashy
    spec: # Which specific containers are in this pod?
      containers:
      - name: dashy
        image: lissy93/dashy:latest
        ports:
          - containerPort: 4000
---

# Service - this makes the Deployment accessible through one IP address in the address space allocated to MetalLB
apiVersion: v1
kind: Service
metadata:
  name: dashy-service
spec:
  selector:
    app: dashy # Which app does this Service attach to?
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer # Distribute the load on the IP assigned by MetalLB equally among all running pods

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
  - host: mafmanhomelab.dedyn.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashy
            port:
              number: 80
